More GUI work and added a custom sprite. Fixed some regrowth issues with chunk tracking. Added regrowth interval mod setting. Removed redundant message. Better support for runtime mod setting changes.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -1,10 +1,9 @@
 [mod-description]
-oarc-mod=This is a multiplayer mod that allows every player to create their own spawn point when they join the game. There are a lot of helpful features to ensure that new players can join at anytime in the game or even join other player's spawn areas.\n\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]\n\n[font=italic]This USED to be available as a scenario, but now is only provided as a mod. The scenario included in this mod only provides a way to overwrite the default freeplay scenario. It also provides a way for experienced server hosts to configure settings from a file instead of through the usual mod settings. Please read the control.lua file inside the scenario for notes.[/font]
+oarc-mod=This is a multiplayer mod that allows every player to create their own spawn point when they join the game. There are a lot of helpful features to ensure that new players can join at anytime in the game or even join other player's spawn areas.\n\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]\n\n[font=default-small]This USED to be available as a scenario, but now is only provided as a mod. To start a new game with this mod, just use the default freeplay scenario. The scenario included in this mod only provides a template to overwrite the default freeplay scenario. It also provides a way for experienced server hosts to configure settings from a file instead of through the usual mod settings. Please read the control.lua file inside the scenario for notes.[/font]
 
 [mod-setting-name]
-oarc-mod-welcome-msg-title=Welcome Message Title
-oarc-mod-welcome-msg=Game Welcome Message
-oarc-mod-server-msg=Server Welcome Message
+oarc-mod-welcome-msg-title=Welcome message title
+oarc-mod-welcome-msg=Welcome message
 oarc-mod-discord-invite=Discord Invite
 
 oarc-mod-enable-main-team=Enable main team
@@ -35,16 +34,16 @@ oarc-mod-respawn-cooldown-min=Reset respawn point cooldown
 oarc-mod-enable-regrowth=Regrowth (map cleanup)
 oarc-mod-enable-world-eater=World eater (map cleanup - additional)
 oarc-mod-enable-abandoned-base-cleanup=Cleanup abandoned bases
+oarc-mod-regrowth-cleanup-interval-min=Regrowth cleanup interval
 
 
 [mod-setting-description]
 oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
-oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game.
-oarc-mod-server-msg=This is an additional message that will be displayed to players when they join the game.
-oarc-mod-discord-invite=Place your discord invite here so players can easily copy it from the in game info panel. Leave empty to disable.
+oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game and in the info panel. [color=red]Leave a single space to disable.[/color]
+oarc-mod-discord-invite=Place your discord invite here so players can easily copy it from the in game info panel. [color=red]Leave a single space to disable.[/color]
 
-oarc-mod-enable-main-team=Allow players to join the main team. This is the default team that is created when the game starts.
-oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP).\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
+oarc-mod-enable-main-team=Allow players to join the main team. This is the default team that is created when the game starts. This lets players share research progress.\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
+oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP). This lets players have their own research progress.\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
 # oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. You can configure individual surfaces using the in game settings menu as well.
 
 oarc-mod-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
@@ -59,7 +58,7 @@ oarc-mod-enable-shared-team-vision=Makes sure all teams can see each other's map
 oarc-mod-enable-shared-team-chat=All teams can see each other's chat messages.
 oarc-mod-enable-shared-spawns=Allow players to share their spawn areas for other players to join.
 oarc-mod-number-of-players-per-shared-spawn=Number of players that can join a shared spawn, including the original player.
-oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chests (or run over your friends with a train).
+oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chests (or run over your friends with a train). This lets you damage your OWN team.
 
 oarc-mod-main-force-name=The name of the main force. This is the default team that is created when the game starts.
 oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
@@ -70,4 +69,5 @@ oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they ca
 
 oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
 oarc-mod-enable-world-eater=Enables world eater. This requires regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
-oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining.
+oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining. This does NOT require regrowth to be enabled.
+oarc-mod-regrowth-cleanup-interval-min=This is the interval in minutes that the regrowth cleanup will run. Whenever a map cleanup happens, the game freezes for a second, so you don't want to run this too often! Abandoned base cleanup happens immediately when a player leaves and is not affected by this setting.
