--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,8 +12,13 @@ oarc-click-info-btn-help=Click the INFO button in the top left to learn more abo
 oarc-vanilla-spawn=Vanilla Spawn
 oarc-default-spawn-behavior=This is the default spawn behavior of a vanilla game. You join the default team in the center of the map.
 
+oarc-surface-select-tooltip=Select the surface you would like to spawn on.
+
 oarc-join-main-team-radio=Join Main Team (shared research)
+oarc-join-main-team-tooltip=You will share research progress with other players on the main team.
+
 oarc-create-own-team-radio=Create Your Own Team (own research tree)
+oarc-create-own-team-tooltip=You will have your own research tree and will not share research with players on the main team.
 
 oarc-moat-option=Surround your spawn with a moat
 oarc-moat-option-tooltip=If you spawn near land, a ring of water will be generated around your spawn area. Depending on the mod options, there may be a small land bridge created as well. If you spawn in water already, this option has no effect.
@@ -35,7 +40,9 @@ oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center 
 
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
 oarc-join-someone-dropdown-label=Select Shared Spawn:
+oarc-join-someone-dropdown-tooltip=Select a player to REQUEST to join their shared spawn area.
 oarc-join-someone-avail=Join Someone (__1__ available)
+oarc-join-someone-avail-tooltip=This will send a request to join another player's shared spawn area. You can cancel the request if you change your mind.
 oarc-join-someone-info=You can request to join someone else's starting area. This requires at least 1 person to have allowed access to their base.
 
 oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
@@ -45,6 +52,7 @@ oarc-no-shared-spawn-selected=You have not selected a valid player to join. Plea
 oarc-invalid-host-shared-spawn=Selected player is no longer available! Please try again.
 
 oarc-buddy-spawn=Request Buddy Spawn
+oarc-buddy-spawn-tooltip=This will send the request to your selected buddy. They may choose to accept or deny the request. You may also cancel the request if you change your mind.
 oarc-buddy-spawn-disabled=Buddy spawns are disabled in this mode.
 oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the same time, you spawn beside each other, each with your own resources.
 
@@ -70,13 +78,16 @@ oarc-you-will-spawn-once-host=You will spawn once the host selects yes...
 oarc-player-cancel-join-request=__1__ cancelled their request to join your spawn.
 
 oarc-spawn-ctrl=Spawn Ctrl
-oarc-spawn-controls=Spawn Controls:
-oarc-spawn-allow-joiners=Allow others to join your base.
+oarc-shared-spawn-controls=Shared Spawn Controls
+oarc-shared-spawn-allow-joiners=Allow others to join your base.
 
-oarc-set-respawn-loc=Set New Respawn Location (has a cooldown)
+oarc-set-respawn-loc-header=Respawn Location
+oarc-set-respawn-loc=Set Respawn Location
+oarc-set-respawn-loc-tooltip=This will set your respawn point to your current location. There is a cooldown before you can change it again.
 oarc-set-respawn-loc-cooldown=Set Respawn Cooldown Remaining: __1__
-oarc-set-respawn-note=This will set your respawn point to your current location.
+oarc-set-respawn-note=This will set your respawn point to your current location. Change tabs to update the timer.
 
+oarc-join-queue-header=Shared Spawn Queue
 oarc-select-player-join-queue=Select a player from the join queue:
 
 oarc-accept=Accept
@@ -96,6 +107,7 @@ oarc-your-request-rejected=Your request to join was rejected.
 oarc-player-joining-base=__1__ is joining __2__'s base!
 
 oarc-buddy-select-label=Select Buddy:
+oarc-buddy-select-tooltip=Select a buddy from the list to request a buddy spawn.
 oarc-buddy-spawn-options=Buddy Spawn Options
 oarc-buddy-spawn-instructions=You and your buddy must be in this menu at the same time. Only one of you can send the request. Select your your spawn options first, then select your buddy from the list. Click Request Buddy Spawn. The other buddy can then accept (or deny) the request. This will allow you both to spawn next to each other, each with your own spawn area.
 
@@ -105,6 +117,7 @@ oarc-buddy-spawn-request-header=Buddy Request!
 
 oarc-buddy-refresh=Refresh Buddy List
 oarc-create-buddy-team=Create Your Own Buddy Team (buddy and you share research)
+oarc-create-buddy-team-tooltip=If this is enabled, you and your buddy will share research progress. 
 
 oarc-buddy-spawn-near=Request Buddy Spawn (Near)
 oarc-buddy-spawn-far=Request Buddy Spawn (Far)
@@ -138,10 +151,11 @@ oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in
 oarc-settings-tab-title=Mod Settings
 oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
-oarc-settings-tab-description=This tab contains additional settings that are not available in the mod settings menu.
+oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 
 oarc-settings-tab-title-surface=Surface Settings
+oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow new players to select this surface when they spawn.
 
 
 oarc-mod-faq-what-is-this-mod=What is this mod?
