--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -51,8 +51,8 @@ oarc-you-will-spawn-once-host=一旦对方大佬选择是，你便会加入...
 oarc-player-cancel-join-request=__1__ 取消了他加入你基地的请求。
 
 oarc-spawn-ctrl=生成控制
-oarc-spawn-controls=生成控制选项：
-oarc-spawn-allow-joiners=允许其他人加入你的基地。
+oarc-shared-spawn-controls=生成控制选项：
+oarc-shared-spawn-allow-joiners=允许其他人加入你的基地。
 
 oarc-set-respawn-loc=设置新的重生点（有冷却时间）
 oarc-set-respawn-loc-cooldown=重生点冷却剩余时间：__1__
