Fixed surface blacklist and made enable spawns on other surfaces a startup setting. Improved the shared spawn GUI experience a bit more. Removing outdated and duplicate locale files.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -2,13 +2,14 @@
 oarc-mod=This is a multiplayer mod that allows every player to create their own spawn point when they join the game. There are a lot of helpful features to ensure that new players can join at anytime in the game or even join other player's spawn areas.\n\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]\n\n[font=default-small]This USED to be available as a scenario, but now is only provided as a mod. To start a new game with this mod, just use the default freeplay scenario. The scenario included in this mod only provides a template to overwrite the default freeplay scenario. It also provides a way for experienced server hosts to configure settings from a file instead of through the usual mod settings. Please read the control.lua file inside the scenario for notes.[/font]
 
 [mod-setting-name]
+oarc-mod-default-allow-spawning-on-other-surfaces=Default to allow spawns on other surfaces
+
 oarc-mod-welcome-msg-title=Welcome message title
 oarc-mod-welcome-msg=Welcome message
 oarc-mod-discord-invite=Discord Invite
 
 oarc-mod-enable-main-team=Enable main team
 oarc-mod-enable-separate-teams=Enable separate teams
-# oarc-mod-enable-spawning-on-other-surfaces=Allow starting on other surfaces
 
 oarc-mod-allow-moats-around-spawns=Allow moats around spawns
 oarc-mod-enable-moat-bridging=Moat bridges
@@ -38,13 +39,14 @@ oarc-mod-regrowth-cleanup-interval-min=Regrowth cleanup interval
 
 
 [mod-setting-description]
+oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu![/color]
+
 oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
 oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game and in the info panel. [color=red]Leave a single space to disable.[/color]
 oarc-mod-discord-invite=Place your discord invite here so players can easily copy it from the in game info panel. [color=red]Leave a single space to disable.[/color]
 
 oarc-mod-enable-main-team=Allow players to join the main team. This is the default team that is created when the game starts. This lets players share research progress.\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
 oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP). This lets players have their own research progress.\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-# oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. You can configure individual surfaces using the in game settings menu as well.
 
 oarc-mod-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
 oarc-mod-enable-moat-bridging=If the spawn area is surrounded by land, the moat will have a small land bridge connecting it.
