--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,12 +2,13 @@ scenario-name=OARC
 
 description=This mod provides a scenario that overhauls multiplayer spawning.\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]
 
-oarc-scenario-info-warn-msg=This scenario allows players to create their own spawn points far from the center of the map. For more information, click the INFO button in the top left corner.
+oarc-scenario-info-warn-msg=This scenario allows players to create their own spawn points far from the center of the map. For more information, click the OARC button in the top left corner.
 
 oarc-i-understand=I Understand
 oarc-spawn-options=Spawn Options
 
-oarc-click-info-btn-help=Click the INFO button in the top left to learn more about this scenario! This is your ONLY chance to choose a spawn option. Choose carefully...
+oarc-click-info-btn-help=Click the OARC button in the top left to learn more about this scenario! This is your ONLY chance to choose a spawn option. Choose carefully...
+oarc-gui-tooltip=Click to open and close the mod gui. This provides settings and information about the mod.
 
 oarc-vanilla-spawn=Vanilla Spawn
 oarc-default-spawn-behavior=This is the default spawn behavior of a vanilla game. You join the default team in the center of the map.
@@ -41,9 +42,10 @@ oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center 
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
 oarc-join-someone-dropdown-label=Select Shared Spawn:
 oarc-join-someone-dropdown-tooltip=Select a player to REQUEST to join their shared spawn area.
-oarc-join-someone-avail=Join Someone (__1__ available)
-oarc-join-someone-avail-tooltip=This will send a request to join another player's shared spawn area. You can cancel the request if you change your mind.
-oarc-join-someone-info=You can request to join someone else's starting area. This requires at least 1 person to have allowed access to their base.
+oarc-join-shared-button-enable=Join (__1__ on __2__)
+oarc-join-shared-button-disable=Select A Player First!
+oarc-join-shared-button-tooltip=This will send a request to join the selected player's shared spawn area. You can cancel the request if you change your mind.
+oarc-join-someone-info=You can request to join someone else's starting area. This requires at least 1 person to have allowed access to their base and to have space for you to join.
 
 oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
 oarc-join-check-again=Check Again
@@ -80,6 +82,7 @@ oarc-player-cancel-join-request=__1__ cancelled their request to join your spawn
 oarc-spawn-ctrl=Spawn Ctrl
 oarc-shared-spawn-controls=Shared Spawn Controls
 oarc-shared-spawn-allow-joiners=Allow others to join your base.
+oarc-shared-spawn-full=Your base is full! No more players can join.
 
 oarc-set-respawn-loc-header=Respawn Location
 oarc-set-respawn-loc=Set Respawn Location
