--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -39,7 +39,7 @@ oarc-mod-regrowth-cleanup-interval-min=Regrowth cleanup interval
 
 
 [mod-setting-description]
-oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu![/color]
+oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]If you have other mods installed that add additional surfaces, I recommend leaving this disabled. Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu.[/color]
 
 oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
 oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game and in the info panel. [color=red]Leave a single space to disable.[/color]
