--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -80,6 +80,11 @@ oarc-you-will-spawn-once-host=You will spawn once the host selects yes...
 oarc-player-cancel-join-request=__1__ cancelled their request to join your spawn.
 
 oarc-spawn-ctrl=Spawn Ctrl
+oarc-spawn-info-header=Spawn Information
+oarc-spawn-info-surface-label=Surface: __1__ (x=__2__, y=__3__)
+oarc-spawn-info-location-button=Show Map Location
+oarc-spawn-info-location-button-tooltip=Click to show the location on the map.
+oarc-spawn-gps-home-location=Your home location: 
 oarc-shared-spawn-controls=Shared Spawn Controls
 oarc-shared-spawn-allow-joiners=Allow others to join your base.
 oarc-shared-spawn-full=Your base is full! No more players can join.
