Cleaned up globals usage a LOT. No more "ocore". Re-added offline protection since it was missing. Placeholder changelog.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -66,6 +66,11 @@ oarc-player-is-joining-near=__1__ is joining the game from a distance on __2__!
 oarc-player-is-joining-far=__1__ is joining the game from a great distance on __2__!
 
 oarc-please-wait=PLEASE WAIT WHILE YOUR SPAWN POINT IS GENERATED!
+oarc-player-left-early=Player (__1__) left the game before __2__ minutes of play time. Their spawn area has been marked for cleanup.
+oarc-generating-spawn-please-wait=Generating your spawn now, please wait...
+oarc-host-left-new-host=__1__ has left so __2__ now owns their base.
+oarc-new-owner-msg=You have been given ownership of this base!
+
 
 oarc-looking-for-buddy=__1__ is looking for a buddy.
 
