Refined new spawn search logic. (Using random vector search.)

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -61,9 +61,10 @@ oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the sa
 oarc-max-players-shared-spawn=You can allow up to __1__ other players to join you.
 oarc-spawn-dist-notes=Spawn distance is in CHUNKS from the center of the map.\nExpect a fight to reach other players.
 
-oarc-player-is-joining-main-force=__1__ is joining the main force on __2__!
-oarc-player-is-joining-near=__1__ is joining the game from a distance on __2__!
-oarc-player-is-joining-far=__1__ is joining the game from a great distance on __2__!
+oarc-player-is-joining=__1__ is joining the game on __2__!
+oarc-player-started-own-team=__1__ has started their own team!
+oarc-player-no-new-teams-sorry=Sorry, no new teams can be created. You were assigned to the default team instead.
+oarc-no-ungenerated-land-error=[color=red]Failed to find ungenerated land to spawn on! Please try again. If you see this message multiple times, it could be a settings or mod conflict issue.[/color]
 
 oarc-please-wait=PLEASE WAIT WHILE YOUR SPAWN POINT IS GENERATED!
 oarc-player-left-early=Player (__1__) left the game before __2__ minutes of play time. Their spawn area has been marked for cleanup.
