Fixed spawn shapes config (specifically moat and tree ring widths). Added in rich text map locations broadcast for any new spawn. Started work on secondary surface spawning mechanic.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -65,6 +65,8 @@ oarc-player-is-joining=__1__ is joining the game on __2__!
 oarc-player-started-own-team=__1__ has started their own team!
 oarc-player-no-new-teams-sorry=Sorry, no new teams can be created. You were assigned to the default team instead.
 oarc-no-ungenerated-land-error=[color=red]Failed to find ungenerated land to spawn on! Please try again. If you see this message multiple times, it could be a settings or mod conflict issue.[/color]
+oarc-buddies-are-joining=__1__ and __2__ are joining the game together on __3__!
+oarc-player-new-secondary=__1__ has started a secondary base on __2__!
 
 oarc-please-wait=PLEASE WAIT WHILE YOUR SPAWN POINT IS GENERATED!
 oarc-player-left-early=Player (__1__) left the game before __2__ minutes of play time. Their spawn area has been marked for cleanup.
