Added secondary spawn info to GUI tab.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -88,16 +88,25 @@ oarc-you-will-spawn-once-host=You will spawn once the host selects yes...
 oarc-player-cancel-join-request=__1__ cancelled their request to join your spawn.
 
 oarc-spawn-ctrl=Spawn Ctrl
-oarc-spawn-info-header=Spawn Information
-oarc-spawn-info-surface-label=Surface: __1__ (x=__2__, y=__3__)
+oarc-primary-spawn-info-header=Primary Spawn Information
+oarc-primary-spawn-info-note=This is your home base location. If you let other players join your base, they will spawn here.
+oarc-primary-spawn-info-surface-label=Home: __1__ (x=__2__, y=__3__)
+
+oarc-secondary-spawn-info-header=Secondary Spawn Information
+oarc-secondary-spawn-info-note=These are your secondary base locations.
+oarc-secondary-spawn-info-surface-label=Secondary: __1__ (x=__2__, y=__3__)
+
 oarc-spawn-info-location-button=Show Map Location
 oarc-spawn-info-location-button-tooltip=Click to show the location on the map.
-oarc-spawn-gps-home-location=Your home location: 
+
+
+oarc-spawn-gps-location=Location: 
 oarc-shared-spawn-controls=Shared Spawn Controls
 oarc-shared-spawn-allow-joiners=Allow others to join your base.
 oarc-shared-spawn-full=Your base is full! No more players can join.
 
 oarc-set-respawn-loc-header=Respawn Location
+oarc-set-respawn-loc-info-surface-label=Current Surface Respawn: __1__ (x=__2__, y=__3__)
 oarc-set-respawn-loc=Set Respawn Location
 oarc-set-respawn-loc-tooltip=This will set your respawn point to your current location. There is a cooldown before you can change it again.
 oarc-set-respawn-loc-cooldown=Set Respawn Cooldown Remaining: __1__
