Added custom entities for power sharing and item sharing via cross-surface electric networks and linked-chests respectively. Added settings for adjusting enemy evo level.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -174,7 +174,7 @@ oarc-spawn-wait=Please wait!
 oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in __1__ seconds!\nPlease standby...
 
 oarc-settings-tab-title=Mod Settings
-oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! BE CAREFUL!
+oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! Changing settings will not modify existing spawns. BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
 oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
@@ -182,6 +182,8 @@ oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after
 oarc-settings-tab-title-surface=Surface Settings
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow new players to select this surface when they spawn.
 
+oarc-shared-power-pole-helper-txt=This connects to a shared electric network for all players.
+oarc-shared-chest-helper-txt=This connects to a shared storage chest for all players.
 
 oarc-mod-faq-what-is-this-mod=What is this mod?
 oarc-mod-faq-what-is-this-mod-answer=This mod overhauls multiplayer spawning. Players can create their own spawn points away from the center of the map. Players can also join other players' bases, or create buddy spawns. The mod does not change the core gameplay of Factorio, but it does change the way players start the game. The starting area is a preset area with resources, not a "natural" spawn point.
@@ -199,3 +201,7 @@ oarc-mod-faq-cleanup-abandoned=What is the cleanup abandoned bases feature?
 oarc-mod-faq-cleanup-abandoned-answer=This removes the spawn area if the player leaves within the "minimum online time" and will also delete their character. This feature is useful for keeping the map clean and the save file size down. Public servers likely want to enable this feature.
 oarc-mod-faq-offline-protection=What is the offline protection feature?
 oarc-mod-faq-offline-protection-answer=If a base has all players offline, it will be protected from enemy attacks. This is not 100% guaranteed, but it will help prevent the base from being destroyed while players are offline.
+
+[entity-name]
+oarc-linked-chest=OARC Linked Chest
+oarc-linked-power=OARC Linked Power
