--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -29,8 +29,12 @@ oarc-mod-main-force-name=Main force name
 oarc-mod-default-surface=Default starting surface
 oarc-mod-scale-resources-around-spawns=Scale resources around spawns
 oarc-mod-modified-enemy-spawning=Scale enemies around spawns
+oarc-mod-modified-enemy-easy-evo=Easy enemy evolution
+oarc-mod-modified-enemy-medium-evo=Medium enemy evolution
 oarc-mod-minimum-online-time=Minimum online time
 oarc-mod-respawn-cooldown-min=Reset respawn point cooldown
+oarc-mod-enable-shared-power=Shared power
+oarc-mod-enable-shared-chest=Shared chest
 
 oarc-mod-enable-regrowth=Regrowth (map cleanup)
 oarc-mod-enable-world-eater=World eater (map cleanup - additional)
@@ -66,8 +70,12 @@ oarc-mod-main-force-name=The name of the main force. This is the default team th
 oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
 oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
 oarc-mod-modified-enemy-spawning=This scales the enemy spawning globally based on the allowed spawn distances to avoid every spawn being surrounded by behemoth worms.
+oarc-mod-modified-enemy-easy-evo=This is the maximum evolution that the enemies in the warning zone (closest) to a spawn will be FIXED at to ensure all players have a safe start! The warning zone area can be configured via the custom scenario.
+oarc-mod-modified-enemy-medium-evo=This is the maximum evolution that the enemies in the danger zone (next closest) to a spawn will be allowed to reach. Helps ensure players have a safe start! The danger zone area can be configured via the custom scenario.
 oarc-mod-minimum-online-time=The minimum time a player must be online before they leave, otherwise their spawn area will be cleaned up.
 oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
+oarc-mod-enable-shared-power=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly.
+oarc-mod-enable-shared-chest=This gives players a special chest they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in factorio.
 
 oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
 oarc-mod-enable-world-eater=Enables world eater. This requires regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
