Cleaning up a lot of small things. Localizations, minor todos, removing extra log messages. Fixed an issue with regrowth refreshing chunks around players. Added FAQ for sharing electricity and items. Getting ready for first mod release.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -3,6 +3,7 @@ oarc-mod=This is a multiplayer mod that allows every player to create their own 
 
 [mod-setting-name]
 oarc-mod-default-allow-spawning-on-other-surfaces=Default to allow spawns on other surfaces
+oarc-mod-linked-chest-size=Sharing chest capacity
 
 oarc-mod-welcome-msg-title=Welcome message title
 oarc-mod-welcome-msg=Welcome message
@@ -44,6 +45,7 @@ oarc-mod-regrowth-cleanup-interval-min=Regrowth cleanup interval
 
 [mod-setting-description]
 oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]If you have other mods installed that add additional surfaces, I recommend leaving this disabled. Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu.[/color]
+oarc-mod-linked-chest-size=This is the size of the shared chest that players can use to share items with other players. This is only meaningful if the shared chest feature is enabled.
 
 oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
 oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game and in the info panel. [color=red]Leave a single space to disable.[/color]
