--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -118,6 +118,9 @@ oarc-select-player-join-queue=Select a player from the join queue:
 oarc-accept=Accept
 oarc-reject=Reject
 
+oarc-enabled=enabled
+oarc-disabled=disabled
+
 oarc-no-player-join-reqs=You have no players requesting to join you at this time.
 
 oarc-start-shared-base=New players can now join __1__'s base!
@@ -173,14 +176,42 @@ oarc-buddy-declined=__1__ declined your buddy request!
 oarc-spawn-wait=Please wait!
 oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in __1__ seconds!\nPlease standby...
 
-oarc-settings-tab-title=Mod Settings
+oarc-gui-tab-header-label=Scenario Info and Controls
+oarc-server-info-tab-title=Server Info
+oarc-spawn-ctrls-tab-title=Spawn Controls
+oarc-settings-tab-title=Settings
+oarc-mod-info-tab-title=Mod Info
+
+oarc-server-info-tab-welcome-msg-title=Welcome Message
+oarc-server-info-tab-discord-invite=Discord Invite:
+oarc-server-info-tab-discord-invite-tooltip=Come join the discord (copy this invite)!
+oarc-server-info-tab-map-info-label=Map Info
+oarc-server-info-tab-server-run-time=Server Run Time: __1__
+oarc-server-info-leave-warning=If you leave within __1__ minutes of joining, your base and character will be deleted.
+oarc-server-info-admin-controls=Admin Controls
+oarc-server-info-ban-select-player=Select Player:
+oarc-server-info-button-ban-player=Ban Player
+oarc-server-info-button-restart-player=Restart Player
+
+oarc-player-not-found=Player __1__ is not found?
+oarc-player-about-to-spawn=Player __1__ is about to spawn, try again later.
+oarc-player-none-selected=No player selected!
+
+
+oarc-settings-tab-title-mod-settings=Mod Settings
 oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! Changing settings will not modify existing spawns. BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
 oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
-
 oarc-settings-tab-title-surface=Surface Settings
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow new players to select this surface when they spawn.
+oarc-settings-tab-surface-column-header=Surface
+oarc-settings-tab-surface-spawning-enabled=Spawning Enabled
+oarc-settings-tab-surface-regrowth-enabled=Regrowth Enabled
+
+
+
+
 
 oarc-shared-power-pole-helper-txt=This connects to a shared electric network for all players.
 oarc-shared-chest-helper-txt=This connects to a shared storage chest for all players.
@@ -201,6 +232,11 @@ oarc-mod-faq-cleanup-abandoned=What is the cleanup abandoned bases feature?
 oarc-mod-faq-cleanup-abandoned-answer=This removes the spawn area if the player leaves within the "minimum online time" and will also delete their character. This feature is useful for keeping the map clean and the save file size down. Public servers likely want to enable this feature.
 oarc-mod-faq-offline-protection=What is the offline protection feature?
 oarc-mod-faq-offline-protection-answer=If a base has all players offline, it will be protected from enemy attacks. This is not 100% guaranteed, but it will help prevent the base from being destroyed while players are offline.
+oarc-mod-faq-shared-power=What is the shared power feature?
+oarc-mod-faq-shared-power-answer=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly. It utilizes cross-surface power poles to make "wireless" connections.
+oarc-mod-faq-shared-chest=What is the shared chest feature?
+oarc-mod-faq-shared-chest-answer=This gives players a special chest at their spawn area that they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in Factorio. This allows players to share items with other players in a secure way.
+
 
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
