--- a/scenarios/OARC/locale/en/locale-scenario.cfg
+++ b/scenarios/OARC/locale/en/locale-scenario.cfg
@@ -1,3 +1,3 @@
-scenario-name=OARC Scenario
+scenario-name=OARC-TEMPLATE
 
 description=This is an EMPTY template scenario! It is provided as a way to override the default freeplay scenario if you want to. Additionally, experienced server hosts can configure all settings from a file instead of through the mod settings. Please read the control.lua file inside the scenario for notes.
