Added support for secondary spawns. Currently just copies nauvis style spawns. Will need updating for Space Age later. Fixed a missing tooltip.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,7 +13,7 @@ oarc-gui-tooltip=Click to open and close the mod gui. This provides settings and
 oarc-vanilla-spawn=Vanilla Spawn
 oarc-default-spawn-behavior=This is the default spawn behavior of a vanilla game. You join the default team in the center of the map.
 
-oarc-surface-select-tooltip=Select the surface you would like to spawn on.
+oarc-surface-select-tooltip=Select the surface you would like to spawn on. (Disabled if only one surface is available.)
 
 oarc-join-main-team-radio=Join Main Team (shared research)
 oarc-join-main-team-tooltip=You will share research progress with other players on the main team.
@@ -199,15 +199,16 @@ oarc-player-none-selected=No player selected!
 
 
 oarc-settings-tab-title-mod-settings=Mod Settings
-oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! Changing settings will not modify existing spawns. BE CAREFUL!
+oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues!\nChanging settings will not modify existing spawns. BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
 oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 oarc-settings-tab-title-surface=Surface Settings
-oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow new players to select this surface when they spawn.
+oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
+oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the regrowth and world eater features to work on this surface, if those are enabled.
 oarc-settings-tab-surface-column-header=Surface
-oarc-settings-tab-surface-spawning-enabled=Spawning Enabled
-oarc-settings-tab-surface-regrowth-enabled=Regrowth Enabled
+oarc-settings-tab-surface-spawning-enabled=Custom Spawns
+oarc-settings-tab-surface-regrowth-enabled=Regrowth
 
 
 
