--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -28,6 +28,8 @@ oarc-mod-enable-friendly-fire=Enable friendly fire
 
 oarc-mod-main-force-name=Main force name
 oarc-mod-default-surface=Default starting surface
+oarc-mod-enable-secondary-spawns=Enable secondary spawns
+
 oarc-mod-scale-resources-around-spawns=Scale resources around spawns
 oarc-mod-modified-enemy-spawning=Scale enemies around spawns
 oarc-mod-modified-enemy-easy-evo=Easy enemy evolution
@@ -70,6 +72,8 @@ oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chest
 
 oarc-mod-main-force-name=The name of the main force. This is the default team that is created when the game starts.
 oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
+oarc-mod-enable-secondary-spawns=Enabling this will provide players with a secondary spawn point when they first move to a new surface/planet. This is only applicable if the other surface is enabled for separate spawns.
+
 oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
 oarc-mod-modified-enemy-spawning=This scales the enemy spawning globally based on the allowed spawn distances to avoid every spawn being surrounded by behemoth worms.
 oarc-mod-modified-enemy-easy-evo=This is the maximum evolution that the enemies in the warning zone (closest) to a spawn will be FIXED at to ensure all players have a safe start! The warning zone area can be configured via the custom scenario.
