--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -44,6 +44,22 @@ oarc-mod-enable-world-eater=World eater (map cleanup - additional)
 oarc-mod-enable-abandoned-base-cleanup=Cleanup abandoned bases
 oarc-mod-regrowth-cleanup-interval-min=Regrowth cleanup interval
 
+oarc-mod-spawn-general-radius-tiles=Spawn area radius
+oarc-mod-spawn-general-moat-width-tiles=Spawn moat width
+oarc-mod-spawn-general-tree-width-tiles=Spawn tree ring width
+oarc-mod-spawn-general-enable-resources-circle-shape=Spawn resource deposits shape
+oarc-mod-spawn-general-enable-force-grass=Force spawn area grass
+oarc-mod-spawn-general-shape=Spawn area shape
+
+oarc-mod-resource-placement-enabled=Starting resource auto placement
+oarc-mod-resource-placement-distance-to-edge=Starting resource distance to edge
+oarc-mod-resource-placement-angle-offset=Starting resource angle offset
+oarc-mod-resource-placement-angle-final=Starting resource angle final
+oarc-mod-resource-placement-vertical-offset=Starting resource vertical offset
+oarc-mod-resource-placement-horizontal-offset=Starting resource horizontal offset
+oarc-mod-resource-placement-linear-spacing=Starting resource linear spacing
+oarc-mod-resource-placement-size-multiplier=Starting resource size multiplier
+oarc-mod-resource-placement-amount-multiplier=Starting resource amount multiplier
 
 [mod-setting-description]
 oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]If you have other mods installed that add additional surfaces, I recommend leaving this disabled. Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu.[/color]
@@ -87,3 +103,20 @@ oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks o
 oarc-mod-enable-world-eater=Enables world eater. This requires regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
 oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining. This does NOT require regrowth to be enabled.
 oarc-mod-regrowth-cleanup-interval-min=This is the interval in minutes that the regrowth cleanup will run. Whenever a map cleanup happens, the game freezes for a second, so you don't want to run this too often! Abandoned base cleanup happens immediately when a player leaves and is not affected by this setting.
+
+oarc-mod-spawn-general-radius-tiles=This is the radius of the spawn area in tiles. I would not make this much smaller then 2 chunks (64) and not too huge unless you want spawns to take a long time to generate.
+oarc-mod-spawn-general-moat-width-tiles=This is the width of the moat around the spawn area in tiles, if a moat is enabled and selected at spawn time.
+oarc-mod-spawn-general-tree-width-tiles=This is the width of the tree ring around the spawn area in tiles. It guarantees some trees near to spawn.
+oarc-mod-spawn-general-enable-resources-circle-shape=This is the shape of the starting area resource deposits.
+oarc-mod-spawn-general-enable-force-grass=Enabling this will make the entire spawn area pure grass. Disabling will use landfill as needed instead.
+oarc-mod-spawn-general-shape=This is the shape of the spawn area.
+
+oarc-mod-resource-placement-enabled=You should leave this enabled unless you are manually specifying resource placements in the custom scenario!
+oarc-mod-resource-placement-distance-to-edge=This is the distance from the edge of the spawn area that resources will be placed. Only applicable for circle/octagon shaped spawns.
+oarc-mod-resource-placement-angle-offset=This is the starting angle offset (in radians) for the resource placement. At what angle (in radians) do resources start.  0 = east. 3.14 = west. Resources are placed clockwise starting at this angle. Only applicable for circle/octagon shaped spawns.
+oarc-mod-resource-placement-angle-final=This is the final angle offset (in radians) for the resource placement. At what angle (in radians) do resources end. 0 = east. 3.14 = west. Resources are placed clockwise ending at this angle. Only applicable for circle/octagon shaped spawns.
+oarc-mod-resource-placement-vertical-offset=This is the vertical offset (in tiles) for the resource placement from the top-left of the spawn. Only applicable for square shaped spawns.
+oarc-mod-resource-placement-horizontal-offset=This is the horizontal offset (in tiles) for the resource placement from the top-left of the spawn. Only applicable for square shaped spawns.
+oarc-mod-resource-placement-linear-spacing=This is the linear spacing (in tiles) between resources. Only applicable for square shaped spawns.
+oarc-mod-resource-placement-size-multiplier=This changes the size of the resource deposits. Default settings should provide close to a vanilla starting experience.
+oarc-mod-resource-placement-amount-multiplier=This changes the richness of the resource deposits. Default settings should provide close to a vanilla starting experience.
