--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -211,8 +211,16 @@ oarc-settings-tab-surface-spawning-enabled=Custom Spawns
 oarc-settings-tab-surface-regrowth-enabled=Regrowth
 
 
+oarc-settings-section-header-server-info=Server Info
+oarc-settings-section-header-gameplay=Gameplay
+oarc-settings-section-header-regrowth=Regrowth
+oarc-settings-section-header-general-spawn=General Spawn Area Config
+oarc-settings-section-header-resource-placement=Starting Resources Placement
 
+oarc-settings-section-subheader-resource-placement-circular=For circle/octagon spawns
+oarc-settings-section-subheader-resource-placement-square=For square spawns
 
+oarc-settings-section-subheader-regrowth-warning=These features can help reduce save file size but can be more UPS intensive.\n
 
 oarc-shared-power-pole-helper-txt=This connects to a shared electric network for all players.
 oarc-shared-chest-helper-txt=This connects to a shared storage chest for all players.
